[package]
name = "pakr-mio-afpacket"
version = "0.2.0"
authors = ["Alexander Polakov <plhk@sdf.org>", "Pawel Kraszewski <pawel@kraszewscy.net>"]
description = "Raw packet sockets (AF_PACKET) support for mio"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/p-kraszewski/mio-afpacket"
repository = "https://github.com/p-kraszewski/mio-afpacket"
keywords = ["mio", "async", "raw", "socket"]
categories = ["network-programming", "os"]
edition = "2018"

[dependencies]
mio = { version = "^0.7", features = ["tcp", "os-util", "os-poll"] }
libc = "^0.2"

[dev-dependencies]
pretty-hex = "^0.2"
